# hega-rs

./: .gitignore  Cargo.toml  Particles([-1120])-test  README.md  build.rs  genarg.bat  phsd.csv.statistics  printer.ipynb  results.csv.stat  test
data/PbPbSim/sim/: z-pbpb5020 (10).data  z-pbpb5020 (11).data  z-pbpb5020 (2).data  z-pbpb5020 (3).data  z-pbpb5020 (4).data  z-pbpb5020 (5).data  z-pbpb5020 (6).data  z-pbpb5020 (7).data  z-pbpb5020 (8).data  z-pbpb5020 (9).data
data/hepdata/: HEPData-ins1394854-v1-Table_34.csv  HEPData-ins1394854-v1-Table_35.csv  HEPData-ins1394854-v1-Table_36.csv
data/pbpb/epos_test_0/results/: z-pp7.data
data/pbpb/epos_test_1/results/: z-pp7.data
data/pbpb/epos_test_2/results/: z-pp7.data
data/pbpb/epos_test_3/options/: pp7.optns
data/pbpb/epos_test_6/: runBasic.csh
data/pbpb/epos_test_6/results/: z-pp7.data
data/pbpb/epos_test_7/results/: z-pp7.data
data/pbpb/epos_test_8/results/: z-pp7.data
data/urQMD-results/tests/urqmd_test_2/: input  run.bash
dicts/: EPOS.particles.txt  EPOS_BARYONS.particles.txt  EPOS_LEPTONS.particles.txt  NUCLEI_LIST.txt
src/: api_macro.rs  cli.rs  custom_criteria.rs  main.rs
src/anlz/: fncs.rs  generic.rs  impls.rs  mod.rs
src/fmt/: decoder.rs  generic.rs  hepmc.rs  mod.rs  oscar.rs  phqmd.rs  qgsm.rs
src/fmt/root/: mod.rs  tree.rs
